# pandoc_rb

./: .gitignore  .ruby-gemset  .rvmrc  .travis.yml  Gemfile  LICENSE  LICENSE.txt  README.md  Rakefile  pandoc-rb.cabal  pandoc-rb.gemspec  pandoc_rb-0.1.0.0.gem  pandoc_rb.gemspec  stack.yaml
bench/: bench.rb
ext/: extconf.rb
ext/pandoc-rb/: extconf.rb
ext/pandoc_rb/: extconf.rb  pandoc-rb.cabal  pandoc_rb.c  pandoc_rb_test.c  stack.yaml
ext/pandoc_rb/src/: PandocRb.hs
ext/pandoc_rb/src/Text/Pandoc/: C.hs
ext/pandoc_rb/src/Text/Pandoc/C/: Types.hs  Utils.hs
ext/pandoc_rb/test/: DetailedSpec.hs
lib/: pandoc-rb.rb  pandoc_rb.rb
lib/pandoc-rb/: error.rb  version.rb
lib/pandoc_rb/: parse_failure.rb  parsec_error.rb  readers.rb  return.rb  string.rb  version.rb  writers.rb
src/Text/Pandoc/: C.hs  C_stub.h
test/: DetailedSpec.hs  Main.hs  pandoc_rb_test.rb  test_helper.rb  test_pandoc_rb.rb
test/files/: image_test.docx  large_markdown.md
