name:                pandoc-rb
version:             0.1.0.0
synopsis:            Call pandoc from ruby using the FFI
description:         This package provides C exports made for use by Ruby for calling Pandoc
homepage:            https://github.com/michaeljklein/pandoc-rb
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael Klein
category:            FFI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Pandoc.C
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , either
                     , pandoc
                     , storable-tuple
                     , transformers
  ghc-options:         -O3
  -- -no-hs-main -o HsTest.so
  default-language:    Haskell2010

test-suite pandoc-rb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , bytestring
                     , either
                     , pandoc
                     , pandoc-rb
                     , storable-tuple
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaeljklein/pandoc-rb
