name:          pandoc-rb
version:       0.1.0.0
synopsis:      Call pandoc from ruby using the FFI
description:   This package provides C exports made for use by Ruby for calling Pandoc
homepage:      https://github.com/michaeljklein/pandoc-rb
license:       BSD3
author:        Michael Klein
maintainer:    lambdamichael@gmail.com
category:      FFI
build-type:    Simple
cabal-version: >=1.10

executable PandocRb.dylib
  main-is: PandocRb.hs
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , either
                     , pandoc
                     , pandoc-types
                     , storable-tuple
                     , transformers
                     , aeson
                     , parsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  include-dirs:        src
  ghc-options:         -O -shared -fPIC -dynamic
  extra-libraries:     HSrts-ghc8.0.2

source-repository head
  type:     git
  location: https://github.com/michaeljklein/pandoc-rb

