name:          pandoc-rb
version:       0.1.0.0
synopsis:      Call pandoc from ruby using the FFI
description:   This package provides C exports made for use by Ruby for calling Pandoc
homepage:      https://github.com/michaeljklein/pandoc_rb
license:       BSD3
author:        Michael Klein
maintainer:    lambdamichael@gmail.com
category:      FFI
build-type:    Simple
cabal-version: >=1.10

executable PandocRb.dylib
  main-is: PandocRb.hs
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >= 4.7 && < 5
                     , pandoc-rb
                     , bytestring
                     , either
                     , pandoc
                     , pandoc-types
                     , storable-tuple
                     , transformers
                     , aeson
                     , parsec
  hs-source-dirs:      src
  other-modules:       Text.Pandoc.C
                     , Text.Pandoc.C.Types
                     , Text.Pandoc.C.Utils
  default-language:    Haskell2010
  include-dirs:        src
  ghc-options:         -O3 -shared -fPIC -dynamic -Wall
  extra-libraries:     HSrts-ghc8.0.2


library
  hs-source-dirs:      src
  exposed-modules:     Text.Pandoc.C
                     , Text.Pandoc.C.Types
                     , Text.Pandoc.C.Utils
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , either
                     , pandoc == 1.19.2.1337
                     , pandoc-types
                     , storable-tuple
                     , transformers
                     , aeson
                     , parsec
  ghc-options:         -O3 -Wall
  default-language:    Haskell2010

test-suite pandoc-rb-test
  type:                detailed-0.9
  hs-source-dirs:      test
  test-module:         DetailedSpec
  build-depends:       base >= 4.7 && < 5
                     , Cabal >= 1.20.0
                     , QuickCheck
                     , bytestring
                     , either
                     , pandoc == 1.19.2.1337
                     , pandoc-types
                     , pandoc-rb
                     , storable-tuple
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaeljklein/pandoc_rb


